static/css/style.css
/* register and sign in */
.registerform {
  margin-top: 110px;
}

/* Sticky Footer Classes */

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

#page-content {
  flex: 1 0 auto;
}

#body {
  padding: 10px;
  padding-bottom: 60px;
}

#sticky-footer {
  width: 100%;
  min-height: 60px;
  bottom: -20px;
  position: relative;
}

.maincontainer {
  margin-top: 220px;
  min-height: 100%;
  position: relative;
}

/*----- add recipe -----*/

/*-----all recipes and get user recipes page cards -----*/
.recipe-heading {
  margin-top: 90px;
  justify-content: center;
}

.card {
  margin: 10px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
  margin-top: 20px;
}

.column {
  margin-bottom: 20px;
}

/*----- search box on recipe page -----*/
.active-cyan-4 input[type="text"]:focus:not([readonly]) {
  border: 1px solid #4dd0e1;
  box-shadow: 0 0 0 1px #4dd0e1;
}
.active-cyan-3 input[type="text"] {
  border: 1px solid #4dd0e1;
  box-shadow: 0 0 0 1px #4dd0e1;
}

/*---recipes page search button ---*/
.search_categories_btn {
  display: flex;
  justify-content: center;
}

/* recipe card read more button */
.btn-readmore {
  position: absolute;
  right: 10px;
  bottom: 10px;
  color: #fff;
  background-color: #f4623a;
  border-color: #f4623a;
  display: inline-block;
  font-weight: 400;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0.25rem;
}

/* search modal */
.modal-content {
  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.9);
}
/*my recipe cards buttons*/
.delrecipe {
  position: absolute;
  right: 10px;
  bottom: 10px;
}
.editrecipe {
  position: absolute;
  left: 10px;
  bottom: 10px;
}
.btn-primary.readmore {
  color: #fff;
  background-color: #f4623a;
  border-color: #f4623a;
  width: 100%;
  margin-top: 15px;
}
.container-cards {
  margin-bottom: -35px;
  margin-top: 35px;
}

